# orogen

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  CHANGELOG.rst  CMakeLists.txt  History.txt  INSTALL.txt  LICENSE.txt  Makefile  Manifest.txt  README.markdown  README.rd  README.txt  Rakefile  manifest.xml  orogen.gemspec  package.xml
cmake/Modules/: FindRuby.cmake
doc/guide/: config.yaml
doc/guide/src/: cross_project.page  default.template  deployment.page  htmldoc.metainfo  htmldoc.virtual  index.page  task_interface.page  type_definitions.page
examples/data_driven/: .gitignore  data_driven.orogen
examples/data_driven/tasks/: BufferReader.cpp  BufferReader.hpp  DataReader.cpp  DataReader.hpp  Writer.cpp  Writer.hpp
lib/: orogen.rb  orogen_ros.rb
lib/orocos/: generation.rb
lib/orocos/generation/: base.rb  build.rb  component.rb  ocl.orogen  orocos.tlb  rtt.orogen  static_deployment.rb  tasks.rb  test.rb  toolkit.rb
lib/orocos/templates/: CMakeLists.txt  gitignore  main.cpp  type_info.cpp
lib/orocos/templates/config/: FindBFL.cmake  FindComedi.cmake  FindKDL.cmake  FindOpencv7.cmake  FindOrocosCORBA.cmake  FindOrocosOCL.cmake  FindOrocosPkgConfig.cmake  FindOrocosRTT.cmake  FindPlayer.cmake  OrocosComponent.cmake  static_deployer.cmake  write_config_h.cmake
lib/orocos/templates/tasks/: CMakeLists-auto.txt  CMakeLists.txt  Task.cpp  Task.hpp  TaskBase.cpp  TaskBase.hpp  tasks.pc
lib/orocos/templates/toolkit/: CMakeLists.txt  corba.hpp  corba.idl  header.cpp  header.hpp  toolkit.cpp  toolkit.pc  type_corba.hpp  type_info.cpp  types.hpp
lib/orogen/: base.rb  check_for_stray_dots.rb  component.rb  exceptions.rb  gen.rb  html.rb  imports.rb  loaders.rb  marshallers.rb  ocl.orogen  orocos.tlb  orocos.typelist  plugins.rb  ros.rb  rtt.orogen  spec.rb  static_deployment.rb  tasks.rb  test.rb  toolkit.rb  typekit.rb  typenames.rb  version.rb  warn_deprecated.rb
lib/orogen/html/: task_context.rb  task_context_fragment.page  type.rb  type_definition_fragment.page  type_fragment.page
lib/orogen/loaders/: aggregate.rb  base.rb  files.rb  pkg_config.rb  project.rb  rtt.rb
lib/orogen/marshallers/: corba.rb  iostream.rb  mqueue.rb  property_bag.rb  ros.rb  type_info.rb  typelib.rb
lib/orogen/ros/: base.rb  default_loader.rb  input_topic.rb  launcher.rb  loader.rb  node.rb  output_topic.rb  (+3 more)
lib/orogen/templates/tasks/: CMakeLists.txt  DeployerComponent.cpp  Task.cpp  Task.hpp  TaskBase.cpp  TaskBase.hpp  TaskStates.hpp  tasks.pc
lib/orogen/templates/typekit/: BoostSerialization.hpp  CMakeLists-auto.txt  CMakeLists.txt  Makefile  OpaqueConvertions.cpp  OpaqueConvertions.hpp  OpaqueFwd.hpp  OpaqueTypes.hpp  Opaques.cpp  Opaques.hpp  OpaquesDeprecated.hpp  Plugin.cpp  Plugin.hpp  TemplateInstanciation.cpp  Typekit.cpp  Typekit.hpp  TypekitCorba.hpp  TypekitCorbaImpl.hpp  TypekitImpl.hpp  TypekitIntermediates.cpp  TypekitIntermediates.hpp  TypekitTypes.hpp  TypekitUser.cpp  TypekitUser.hpp  TypelibMarshaller.hpp  TypelibMarshallerBase.cpp  Types.hpp  TypesDeprecated.hpp  boost_serialization.hpp  build.cmake  manifest.xml  marshalling_types.hpp  package.xml  smart_ptr.cpp  typekit.pc
lib/orogen/templates/typekit/corba/: CMakeLists-auto.txt  CMakeLists.txt  ConvertionFunctions.cpp  ConvertionFunctions.hpp  Convertions.cpp  Convertions.hpp  CorbaTypes.hpp  Registration.hpp  TransportPlugin.cpp  TransportPlugin.hpp  Type.cpp  Typekit.idl  TypekitCorba.cpp  TypekitCorba.hpp  Types.idl  build.cmake  transport-corba.pc
lib/orogen/templates/typekit/mqueue/: CMakeLists.txt  Registration.hpp  TransportPlugin.cpp  TransportPlugin.hpp  Type.cpp  build.cmake  transport-mqueue.pc
lib/orogen/templates/typekit/ros/: CMakeLists-disabled.txt  CMakeLists.txt  Convertions.cpp  Convertions.hpp  ROSConvertions.cpp  ROSConvertions.hpp  Registration.hpp  TransportPlugin.cpp  TransportPlugin.hpp  Type.cpp  Type.msg  config.cmake.in  rosmap  transport-ros-disabled.pc  transport-ros.pc
lib/orogen/templates/typekit/type_info/: ArrayInfo.cpp  Info.cpp  OpaqueInfo.cpp  TypeInfo.hpp
lib/orogen/templates/typekit/typelib/: CMakeLists.txt  OpaqueType.cpp  Registration.hpp  TransportPlugin.cpp  TransportPlugin.hpp  Type.cpp  TypelibMarshaller.hpp  TypelibMarshallerBase.cpp  TypelibMarshallerBase.hpp  build.cmake  transport-typelib.pc
lib/orogen_ros/: base.rb  input_topic.rb  launch.rb  launcher.rb  loader.rb  node.rb  orogen_ros.rb  output_topic.rb  package.rb  plugin.rb  project.rb  ros.orogen  test.rb  tools.rb
misc/: orogen.vim
misc/new_project/: NAME.orogen  NAMETypes.hpp
rtt-typelib/: CMakeLists.txt  MQTypelibMarshaller.cpp  MQTypelibMarshaller.hpp  OpaqueTypelibMarshaller.hpp  TypelibMarshaller.hpp  TypelibMarshallerBase.cpp  TypelibMarshallerBase.hpp  TypelibMarshallerHandle.hpp  TypelibTransportPlugin.cpp  TypelibTransportPlugin.hpp  rtt-typelib.pc.in
test/: suite.rb  suite_gen.rb  suite_loaders.rb  suite_ros.rb  suite_spec.rb  test.rb  test_base.rb  test_build.rb  test_component.rb  test_deployment.rb  test_generation.rb  test_orogen_ros.rb  test_scripting.rb  test_tasks.rb  test_toolkit.rb  test_typegen.rb  test_typekit.rb
test/data/: TestOpaqueToolkitUser.cpp  empty_component.orogen  exists  opaque.h  opaque_intermediates.h  opaque_invalid.h  simple_component.orogen  test_toolkit.cpp  test_toolkit.xml  test_toolkit_composed_opaque.cpf  test_toolkit_composed_opaque.xml  test_toolkit_generation.orogen  test_toolkit_opaque.cpf  test_toolkit_opaque.cpp  test_toolkit_opaque.orogen  test_toolkit_opaque.xml  test_toolkit_opaque_invalid_0.h  type_info_generation.h
test/generation/: test_base.rb  test_tasks.rb  test_toolkit.rb
test/loaders/: load_all.rb  test_aggregate.rb  test_base.rb  test_pkg_config.rb  test_project.rb
test/orogen/: artemis_state_publisher.orogen  joint_state_publisher.orogen  manipulator_config.orogen  manipulator_motionplanner.orogen  ros_manipulator_motionplanner.orogen
test/ros/: test_package.rb
test/spec/: test_configuration_object.rb  test_deployment.rb  test_operation.rb  test_port.rb  test_ports.rb  test_project.rb  test_task_context.rb
(+222 files in other folders)
