<package>
  <name>orogen</name>
  <version>2.8.0</version>
  <description>
    orogen offers a specification interface for components developped in the
    Orocos Realtime Toolkit. Moreover, it generates the specified modules,
    thus offering an easy and fast development process.
  </description>
  <author>Sylvain Joyeux/sylvain.joyeux@m4x.org</author>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>GPL v2 or later</license>

  <url>http://rock-robotics.org/documentation/orogen</url>

  <buildtool_depend>cmake</buildtool_depend>
  <run_depend>catkin</run_depend>

  <build_depend>ruby</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>typelib</run_depend>
  <run_depend>rtt_typelib</run_depend>
  <run_depend>utilrb</run_depend>
  <run_depend>metaruby</run_depend>
  <run_depend>rake</run_depend>
  <run_depend>ruby</run_depend>

  <export>
    <build_type>
      cmake
    </build_type>
  </export>

</package>
