<package format="3">
  <name>orogen</name>
  <version>2.9.0</version>
  <description>
    orogen offers a specification interface for components developped in the
    Orocos Realtime Toolkit. Moreover, it generates the specified modules,
    thus offering an easy and fast development process.
  </description>
  <author>Sylvain Joyeux/sylvain.joyeux@m4x.org</author>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>
  <license>GPL v2 or later</license>

  <url>http://rock-robotics.org/documentation/orogen</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ruby</build_depend>

  <exec_depend>rtt</exec_depend>
  <exec_depend>typelib</exec_depend>
  <exec_depend>rtt_typelib</exec_depend>
  <exec_depend>utilrb</exec_depend>
  <exec_depend>metaruby</exec_depend>
  <exec_depend>rake</exec_depend>
  <exec_depend>ruby</exec_depend>

  <export>
    <build_type>
      cmake
    </build_type>
  </export>

</package>
